testsuite/poke.pkl/printf-diag-7.pk
/* { dg-do compile } */

/* Unclosed class tag.  */

printf "xxx%<foo:xxx%<bar:xxx%>xxx"; /* { dg-error "" } */
